# skills-manager

./: .gitignore  Cargo.toml  README.md
examples/: config.example.yaml
src/: clawhub.rs  cli.rs  config.rs  error.rs  linker.rs  main.rs  scanner.rs  skills.rs  tui.rs
