[package]
name = "skills-manager"
version = "0.1.0"
edition = "2021"
authors = ["dovics"]
description = "A unified skills management tool for AI assistants (Claude Code, OpenClaw, ZeroClaw)"
license = "MIT"
repository = "https://github.com/dovics/skills"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.5"
fs_extra = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors for terminal output
colored = "2.1"

# Async runtime (optional, for future use)
tokio = { version = "1.38", features = ["full"], optional = true }

# Progress bars
indicatif = "0.17"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Git operations
git2 = "0.19"

# URL parsing
url = "2.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# ZIP extraction
zip = "2.2"

# URL encoding
urlencoding = "2.1"

[features]
default = ["tokio"]
async = ["tokio"]

[[bin]]
name = "skills"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true